--- a/SmartHouse_v1.0/SmartHouse_v1.0.csproj
+++ b/SmartHouse_v1.0/SmartHouse_v1.0.csproj
@@ -41,28 +41,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BrightnessLevel.cs" />
-    <Compile Include="Conditioner.cs" />
-    <Compile Include="ConditionerMode.cs" />
+    <Compile Include="Enum\BrightnessLevel.cs" />
+    <Compile Include="Class\Conditioner.cs" />
+    <Compile Include="Enum\ConditionerMode.cs" />
     <Compile Include="CreateDevice.cs" />
-    <Compile Include="Device.cs" />
-    <Compile Include="Fridge.cs" />
-    <Compile Include="FridgeMode.cs" />
-    <Compile Include="IConditionerMode.cs" />
-    <Compile Include="ICreate.cs" />
-    <Compile Include="IFridgeMode.cs" />
-    <Compile Include="ILampMode.cs" />
-    <Compile Include="ISetChannel.cs" />
-    <Compile Include="ISetTemp.cs" />
-    <Compile Include="ISetVolume.cs" />
-    <Compile Include="ISetWave.cs" />
-    <Compile Include="IStatus.cs" />
-    <Compile Include="Lamp.cs" />
+    <Compile Include="Abstract Class\Device.cs" />
+    <Compile Include="Class\Fridge.cs" />
+    <Compile Include="Enum\FridgeMode.cs" />
+    <Compile Include="Interface\IConditionerMode.cs" />
+    <Compile Include="Interface\ICreate.cs" />
+    <Compile Include="Interface\IFridgeMode.cs" />
+    <Compile Include="Interface\ILampMode.cs" />
+    <Compile Include="Interface\ISetChannel.cs" />
+    <Compile Include="Interface\ISetTemp.cs" />
+    <Compile Include="Interface\ISetVolume.cs" />
+    <Compile Include="Interface\ISetWave.cs" />
+    <Compile Include="Interface\IStatus.cs" />
+    <Compile Include="Class\Lamp.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Radio.cs" />
-    <Compile Include="TV.cs" />
+    <Compile Include="Class\Radio.cs" />
+    <Compile Include="Class\TV.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
